recommend books by branch
